--- a/src/patternfly/components/NotificationDrawer/notification-drawer-list-item.hbs
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer-list-item.hbs
@@ -12,8 +12,8 @@
     pf-m-danger
   {{else if notification-drawer-list-item--IsSuccess}}
     pf-m-success
-  {{else if notification-drawer-list-item--IsDefault}}
-    pf-m-default
+  {{else if notification-drawer-list-item--IsCustom}}
+    pf-m-custom
   {{/if}}
   {{#if notification-drawer-list-item--modifier}} {{notification-drawer-list-item--modifier}}{{/if}}"
   {{#unless notification-drawer-list-item--IsRead}}
