--- a/src/patternfly/components/Popover/popover-title-text.hbs
+++ b/src/patternfly/components/Popover/popover-title-text.hbs
@@ -4,7 +4,7 @@
   {{/if}}>
     {{#if popover--IsAlert}}
       {{#> screen-reader}}
-      {{#if popover--IsDefaultAlert}}
+      {{#if popover--IsCustomAlert}}
         Default
       {{else if popover--IsInfoAlert}}
         Info
