--- a/src/patternfly/components/Popover/popover-title.hbs
+++ b/src/patternfly/components/Popover/popover-title.hbs
@@ -6,7 +6,7 @@
     {{{popover-title--attribute}}}
   {{/if}}>
   {{#> wrapper popover-title-icon--type=(ternary popover-title-icon--type popover-title-icon--type
-        (ternary popover--IsDefaultAlert "bell"
+        (ternary popover--IsCustomAlert "bell"
         (ternary popover--IsInfoAlert "info-circle"
         (ternary popover--IsSuccessAlert "check-circle"
         (ternary popover--IsWarningAlert "exclamation-triangle"
