--- a/src/patternfly/utilities/Text/themes/dark/text.scss
+++ b/src/patternfly/utilities/Text/themes/dark/text.scss
@@ -12,8 +12,8 @@
     color-light-200: (
       color var(--pf-global--Color-200)
     ),
-    default-color-300: (
-      color var(--pf-global--default-color--100)
+    custom-color-300: (
+      color var(--pf-global--custom-color--100)
     ),
     success-color-200: (
       color var(--pf-global--success-color--100)
