--- a/src/patternfly/components/Banner/themes/dark/banner.scss
+++ b/src/patternfly/components/Banner/themes/dark/banner.scss
@@ -13,6 +13,6 @@
       color: var(--pf-global--palette--black-900);
     }
 
-    @include pf-theme-dark--t-dark;
+    // @include pf-theme-dark--t-dark;
   }
 }
