--- a/src/patternfly/components/Masthead/themes/dark/masthead.scss
+++ b/src/patternfly/components/Masthead/themes/dark/masthead.scss
@@ -8,6 +8,6 @@
       --pf-c-toolbar--BackgroundColor: var(--pf-global--palette--black-1000);
     }
 
-    @include pf-theme-dark--t-dark;
+    // @include pf-theme-dark--t-dark;
   }
 }
