--- a/src/patternfly/components/AboutModalBox/themes/dark/about-modal-box.scss
+++ b/src/patternfly/components/AboutModalBox/themes/dark/about-modal-box.scss
@@ -2,6 +2,6 @@
 
 @mixin pf-theme-dark-about-modal-box() {
   .pf-c-about-modal-box {
-    @include pf-theme-dark--t-dark;
+    // @include pf-theme-dark--t-dark;
   }
 }
