--- a/src/patternfly/components/NotificationDrawer/notification-drawer-list-item-header-title.hbs
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer-list-item-header-title.hbs
@@ -12,7 +12,7 @@
     {{else if notification-drawer-list-item--IsSuccess}}
       Success notification:
     {{else if notification-drawer-list-item--IsCustom}}
-      Default notification:
+      Custom notification:
     {{/if}}
   </span>
   {{> @partial-block}}
