--- a/src/patternfly/components/Popover/popover-title-text.hbs
+++ b/src/patternfly/components/Popover/popover-title-text.hbs
@@ -5,7 +5,7 @@
     {{#if popover--IsAlert}}
       {{#> screen-reader}}
       {{#if popover--IsCustomAlert}}
-        Default
+        Custom
       {{else if popover--IsInfoAlert}}
         Info
       {{else if popover--IsSuccessAlert}}
